--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,6 @@
 .lead__subtitle{
-  margin: 0;
+  max-width: 640px;
+  margin: 0 auto;
   margin-bottom: 64px;
   font-weight: 400;
   font-size: 30px;
