--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title{
-  margin: 0;
+  max-width: 720px;
+  margin: 0 auto;
   margin-bottom: 32px;
   font-weight: 900;
   font-size: 96px;
