--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,30 @@
-.cover__overlay {
-  color: #FFFFFF;
+.cover__overlay{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  min-height: 200px;
+  z-index: 3;
+  color: #fff;
   text-decoration: none;
-  z-index: 1;
+  text-align: center;
+}
+
+
+@media screen and (min-width: 768px){
+  .cover__overlay{
+    min-height: 480px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__overlay {
+    min-height: 640px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__overlay {
+    max-height: 740px;
+  }
 }
