--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,16 +1,17 @@
 .cover__subtitle{
-  max-width: 360px;
+  white-space: pre-line;
+  max-width: 288px;
   margin: 0 auto;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
- }
+  font-size: 14px;
+  line-height: 16px;
+}
 
- @media (max-width: 320px) {
+@media screen and (min-width: 768px) {
   .cover__subtitle {
-    /* max-width: 270px; */
-    text-align: center;
-    font-size: 14px;
-    line-height: 16px;
+    max-width: 360px;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 32px;
   }
 }
