--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,16 +1,17 @@
 .cover__title{
-  max-width: 560px;
-  margin: 0 auto;
+  white-space: pre-line;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  margin-bottom: 32px;
+  font-size: 32px;
+  line-height: 35px;
+  margin: 0 auto;
+  margin-bottom: 16px;
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 768px) {
   .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    margin-bottom: 16px;
+    max-width: 560px;
+    font-size: 72px;
+    line-height: 76px;
+    margin-bottom: 32px;
   }
 }
