--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,20 +1,38 @@
 .footer__link{
   font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 24px;
+  line-height: 24px;
   color: #FFFFFF;
   text-decoration: none;
-  margin-right: 18px;
+  margin-bottom: 32px;
 }
 
 .footer__link:last-child{
-  margin-right: 0;
+  margin-bottom: 48px;
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 400px) {
+  .footer__link:last-child {
+      margin-bottom: 0;
+  } 
+}
+
+
+@media screen and (min-width: 400px) {
   .footer__link {
-    margin: 0;
-    font-size: 24px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 18px;
+    margin-right: 18px;
+  }
+
+  .footer__link:last-child{
+    margin-right: 0;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .footer__link {
+    margin-bottom: 0;
+  }
+}
+
