--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,8 +1,10 @@
-@media (max-width: 320px) {
+.footer__links{
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 700px) {
   .footer__links {
-    display: grid;
-    grid-template-rows: repeat(5, 24px);
-    margin-bottom: 48px;
-    row-gap: 32px;
+    flex-direction: row;
   }
 }
