--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,27 +1,28 @@
 .footer{
-  max-width: 1184px;
-  margin: 0 auto;
+  display: flex;
   margin-bottom: 24px;
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  justify-content: space-between;
+  flex-direction: column;
+  margin-left: 16px;
 }
 
-@media (max-width: 1024px) {
-  .footer {
-    max-width: 928px;
+@media screen and (min-width: 400px){
+  .footer{
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 16px;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .footer {
-    max-width: 720px;
+    margin-right: 24px;
+    margin-left: 24px;
   }
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 1024px) {
   .footer {
-    grid-template-columns: 186px;
-    margin-left: 16px;
+    margin-right: 48px;
+    margin-left: 48px;
   }
 }
