--- a/blocks/header/__link-lang/header__link-lang.css
+++ b/blocks/header/__link-lang/header__link-lang.css
@@ -1,5 +1,30 @@
 .header__lang-link{
   border: none;
+    background-color: transparent;
+    color: #FFFFFF;
+    padding: 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    text-decoration-line: underline;
+    margin-bottom: 4px;
+}
+
+.header__lang-link:first-child {
+  margin-right: 18px;
+}
+
+
+@media screen and (min-width: 768px) {
+  .header__lang-link{
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 0;
+  }
+}
+
+/* .header__lang-link{
+  border: none;
   background-color: transparent;
   color: #FFFFFF;
   padding: 0;
@@ -18,4 +43,4 @@
     line-height: 20px;
     margin-bottom: 4px;
   }
-}
+} */
