--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,9 @@
-@media (max-width: 320px) {
-  .header__logo {
-    max-width: 142px;
-    
-  }
+.header__logo{
+  max-width: 142px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo{
+    min-width: 176px;
+  } 
 }
