--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,29 @@
-.header{
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  margin: 16px 16px 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .header{
+    margin: 28px 24px 48px 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    margin: 28px 48px 48px 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    margin: 28px 48px 86px 48px;
+  }
+}
+
+/* .header{
   max-width: 1184px;
   margin: 0 auto;
   display: grid;
@@ -28,4 +53,4 @@
     max-width: 288px;
     margin: 16px 16px 48px;
  }
-}
+} */
