--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,15 +1,15 @@
 .intro__title{
-  margin: 0;
   font-weight: 900;
-  font-size: 54px;
-  line-height: 58px;
+  font-size: 32px;
+  line-height: 35px;
+  margin: 0;
   margin-bottom: 40px;
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 768px) {
   .intro__title {
-    max-width: 250px;
-    font-size: 32px;
-    line-height: 35px;
-  }
+      font-weight: 900;
+      font-size: 54px;
+      line-height: 58px;
+    }
 }
