--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,29 +1,32 @@
 .intro{
   display: grid;
-  grid-template-columns: minmax(auto, 690px);
+  grid-template-columns: minmax(auto, 288px);
   justify-content: center;
-  margin-bottom: 86px;
+  margin-bottom: 64px;
 }
 
-@media (max-width: 1024px) {
+@media screen and (min-width: 768px) {
   .intro{
+    grid-template-columns: minmax(auto, 720px);
+    margin-bottom: 88px;
     justify-content: start;
-    margin-left: 48px;
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro {
+    grid-template-columns: minmax(auto, 690px);
+    width: 928px;
+    margin: 0 auto;
     margin-bottom: 92px;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 1280px) {
   .intro {
-    margin-bottom: 88px;
-  }
-}
-
-@media (max-width: 320px) {
-  .intro {
-    grid-template-columns: minmax(auto, 288px);
-    margin-left: 16px;
-    margin-bottom: 64px;
+    justify-content: center;
+    margin-bottom: 86px;
   }
 }
 
