--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,21 +1,31 @@
 .lead__caption{
   margin: 0;
+  margin-top: 8px;
+  margin-left: 16px;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
-  text-transform: uppercase;
-  margin-top: 8px;
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .lead__caption {
-    margin-left: 24px;  
+    margin-left: 24px;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 1024px) {
   .lead__caption {
-    margin-left: 16px;
+    min-width: 928px;
+    margin: 0 auto;
+    margin-top: 8px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__caption {
+    min-width: 984px;
+    margin: 0 auto;
+    margin-top: 8px;
   }
 }
