--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,22 +1,17 @@
 .lead__subtitle{
-  max-width: 640px;
-  margin: 0 auto;
-  margin-bottom: 64px;
+  max-width: 288px;
   font-weight: 400;
-  font-size: 30px;
-  line-height: 36px;
-  text-align: center;
-}
-@media (max-width: 1024px) {
-  .lead__subtitle{
-    margin-bottom: 56px;
-  }
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;  
+  margin: 0 auto;
+  margin-bottom: 40px;
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 768px) {
   .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 40px;
+    max-width: 640px;
+    font-size: 30px;
+    line-height: 36px;
   }
 }
