--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,17 +1,18 @@
 .lead__title{
-  max-width: 720px;
   margin: 0 auto;
-  margin-bottom: 32px;
   font-weight: 900;
-  font-size: 96px;
-  line-height: 100px;
+  font-size: 40px;
+  line-height: 44px;
+  margin-bottom: 16px;
   text-align: center;
+  max-width: 288px;
 }
 
-@media (max-width: 320px) {
-  .lead__title{
-    font-size: 40px;
-    line-height: 44px;
-    margin-bottom: 16px;
+@media screen and (min-width: 768px) {
+  .lead__title {
+    min-width: 720px;
+    margin-bottom: 32px;
+    font-size: 96px;
+    line-height: 100px;
   }
 }
