--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,23 @@
 .lead{
-  display: grid;
-  justify-content: center;
-  margin-bottom: 92px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 64px;
 }
 
-@media (max-width: 768px) {
-  .lead {
+@media screen and (min-width: 768px) {
+  .lead{
     margin-bottom: 88px;
   }
 }
 
-@media (max-width: 320px) {
-  .lead{
-    margin-bottom: 64px;
+@media screen and (min-width: 1024px) {
+  .lead {
+    margin-bottom: 92px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead {
+    margin-bottom: 86px;
   }
 }
