--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,20 +1,21 @@
-@media (max-width: 1024px) {
-  .photo-grid__item{
-  min-width: 300px;
-  min-height: 225px;  
-  }
+.photo-grid{
+  min-height: 216px;
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .photo-grid__item {
-    min-width: 352px;
     min-height: 264px;
   }
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 1024px) {
   .photo-grid__item {
-    min-width: 288px;
-    min-height: 216px;
+    min-height: 225px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo-grid__item {
+    min-height: 213px;
   }
 }
