--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,33 +1,36 @@
 .photo-grid{
   display: grid;
-  grid-template-columns: repeat(4, 284px);
-  grid-template-rows: repeat(3, 213px);
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, 288px);
+  grid-template-rows: repeat(auto-fill, 216px);
   justify-content: center;
-  gap: 16px;
-  margin-bottom: 86px;
+  column-gap: 16px;
+  row-gap: 12px;
+  margin-bottom: 64px;
 }
 
-@media (max-width: 1024px) {
-  .photo-grid{
-    grid-template-columns: repeat(3, 300px);
+@media screen and (min-width: 768px){
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, 352px);
+    grid-template-rows: repeat(6, 264px);
+    margin-bottom: 88px;
+    row-gap: 16px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .photo-grid {
+    grid-template-columns: repeat(auto-fill, 300px);
     grid-template-rows: repeat(4, 225px);
     margin-bottom: 92px;
   }
 }
 
-@media (max-width: 768px) {
-  .photo-grid {
-    grid-template-columns: repeat(2, 352px);
-    grid-template-rows: repeat(6, 264px);
-    margin-bottom: 88px;
-  }
-}
-
-@media (max-width: 320px) {
-  .photo-grid {
-    grid-template-columns: repeat(1, 288px);
-    grid-template-rows: repeat(12, 216px);
-    row-gap: 12px;
-    margin-bottom: 64px;
+@media screen and (min-width: 1280px) {
+  .photo-grid{
+    grid-template-columns: repeat(auto-fill, 284px);
+    grid-template-rows: repeat(3, 213px);
+    gap: 16px;
+    margin-bottom: 86px;
   }
 }
