--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -1,26 +1,34 @@
-.place__paragraph {
+.place__paragraph{
   margin: 0;
+  margin-right: 16px;
+  margin-left: 16px;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 29px;
+  font-size: 16px;
+  line-height: 26px;
 }
 
-.place__paragraph:first-child{
+.place__paragraph:first-child {
   margin-bottom: 26px;
 }
 
+@media screen and (min-width: 400px) {
+  .place__paragraph {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
 
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 1024px) {
   .place__paragraph {
-    max-width: 288px;
-    margin-left: 16px;
-    margin-bottom: 16px;
+    font-size: 18px;
+    line-height: 29px;
   }
 }
+
