--- a/blocks/places/place/__website/place__website.css
+++ b/blocks/places/place/__website/place__website.css
@@ -1,9 +1,13 @@
 .place__website{
   align-self: end;
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
-@media (max-width: 320px) {
+
+@media screen and (min-width: 400px) {
   .place__website {
-    margin-left: 16px;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
