--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,33 +1,38 @@
 .place{
   display: grid;
-  grid-template-columns: 460px 484px;
-  grid-template-rows: auto 460px;
-  justify-content: center;
-  gap: 48px 40px;
-  margin-bottom: 80px;
+  max-width: 320px;
+  grid-template-columns: minmax(auto, 320px);
+  row-gap: 32px;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 
-@media (max-width: 1024px){
-  .place{
-    grid-template-columns: 440px 456px;
-    grid-template-rows: auto 440px;
-    column-gap: 32px;
-  }
-}
-
-@media (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .place {
+    max-width: 720px;
     grid-template-columns: 340px 352px;
     grid-template-rows: auto auto;
     column-gap: 28px;
-    margin-bottom: 90px;
+    margin-bottom: 73px;
   }
 }
 
-@media (max-width: 320px) {
+@media screen and (min-width: 1024px) {
   .place {
-    grid-template-columns: 320px;
-    row-gap: 32px;
-    margin-bottom: 50px;
+    max-width: 928px;
+    grid-template-columns: 440px 456px;
+    grid-template-rows: auto 440px;
+    column-gap: 32px;
+    margin-bottom: 80px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .place {
+    max-width: 984px;
+    grid-template-columns: 460px 484px;
+    grid-template-rows: auto 460px;
+    gap: 48px 40px;
+  }
+}
+
