--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
-/* FONTS */
-@import url(../fonts/fonts.css);
-
 /* NORMALIZE */
 @import url(../vendor/normalize.css);
 
 /* ROOT */
 @import url(../blocks/root/root.css);
+
+/* FONTS */
+@import url(../vendor/fonts.css);
 
 /* PAGE */
 @import url(../blocks/page/page.css);
@@ -35,6 +35,7 @@
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 /* PLACE */
+@import url(../blocks/places/places.css);
 @import url(../blocks/places/place/place.css);
 @import url(../blocks/places/place/__title/place__title.css);
 @import url(../blocks/places/place/__image/place__image.css);
@@ -54,3 +55,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copywright/footer__copywright.css);
