--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,9 +2,12 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
+  margin-bottom: 32px;
+}
+
+.footer__link a{
   color: #FFFFFF;
   text-decoration: none;
-  margin-bottom: 32px;
 }
 
 .footer__link:last-child{
