--- a/blocks/header/__link-lang/header__link-lang.css
+++ b/blocks/header/__link-lang/header__link-lang.css
@@ -1,18 +1,20 @@
 .header__lang-link{
-  border: none;
-    background-color: transparent;
-    color: #FFFFFF;
-    padding: 0;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
-    text-decoration-line: underline;
-    margin-bottom: 4px;
+  padding: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 4px;
 }
 
-.header__lang-link:first-child {
+.header__lang-link a{
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.header__lang-link:first-child{
   margin-right: 18px;
 }
+
 
 
 @media screen and (min-width: 768px) {
@@ -22,25 +24,3 @@
     margin-bottom: 0;
   }
 }
-
-/* .header__lang-link{
-  border: none;
-  background-color: transparent;
-  color: #FFFFFF;
-  padding: 0;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-}
-
-.header__lang-link:first-child{
-  margin-right: 18px;
-}
-
-@media (max-width: 320px) {
-  .header__lang-link {
-    font-size: 18px;
-    line-height: 20px;
-    margin-bottom: 4px;
-  }
-} */
