--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -19,38 +19,8 @@
 
 @media screen and (min-width: 1280px) {
   .header {
-    margin: 28px 48px 86px 48px;
+    min-width: 1184px;
+    margin: 28px 48px 0px 48px;
   }
 }
 
-/* .header{
-  max-width: 1184px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  justify-content: space-between;
-  align-items: end;
-  margin-bottom: 56px;
-  margin-top: 24px;
-}
-
-@media (max-width: 1024px) {
-  .header{
-    max-width: 928px;
-    margin-top: 28px;
-    margin-bottom: 48px;
-  }
-}
-
-@media (max-width: 768px) {
-  .header {
-    max-width: 720px;
-  }
-}
-
-@media (max-width: 320px) {
-  .header { 
-    max-width: 288px;
-    margin: 16px 16px 48px;
- }
-} */
