--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,11 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 12px;
   line-height: 18px;
+}
+
+.intro__list span{
+    font-weight: 700;
 }
