--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,13 +3,14 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  text-align: center;
+  text-align: center;  
   margin: 0 auto;
   margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
   .lead__subtitle {
+    margin-bottom: 56px;
     max-width: 640px;
     font-size: 30px;
     line-height: 36px;
