--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,36 +1,22 @@
-.photo-grid{
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(auto-fill, 288px);
-  grid-template-rows: repeat(auto-fill, 216px);
-  justify-content: center;
-  column-gap: 16px;
-  row-gap: 12px;
-  margin-bottom: 64px;
+.photo-grid{  
+  max-width: 288px;
+  margin: 0 auto;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 352px);
-    grid-template-rows: repeat(6, 264px);
-    margin-bottom: 88px;
-    row-gap: 16px;
+    max-width: 720px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .photo-grid {
-    grid-template-columns: repeat(auto-fill, 300px);
-    grid-template-rows: repeat(4, 225px);
-    margin-bottom: 92px;
+    max-width: 928px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .photo-grid{
-    grid-template-columns: repeat(auto-fill, 284px);
-    grid-template-rows: repeat(3, 213px);
-    gap: 16px;
-    margin-bottom: 86px;
+  .photo-grid {
+    max-width: 1184px;
   }
 }
