--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -26,7 +26,7 @@
 @media screen and (min-width: 1280px) {
   .intro {
     max-width: 690px;
-    justify-content: center;
+    margin-left: 148px;
     margin-bottom: 86px;
   }
 }
